--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
             <li>Portfolio</li>
             <li>Contacts</li>
         </ul>
-      </a>
     </nav>
     <address>
         <a href="info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </address>
 
  </header>
