--- a/index.html
+++ b/index.html
@@ -14,28 +14,43 @@
  <header>
 
     <nav>
-        <a href="" target="_blank"> WEBSTUDIO</a>
+        <a href="./index.html" target="_blank"> WebStudio</a>
         <ul>
-            <li>Studio</li>
-            <li>Portfolio</li>
-            <li>Contacts</li>
+            <li>
+                <a href="">Studio</a>
+            </li>
+            <li>
+                <a href="">Portfolio</a>
+            </li>
+            <li>
+                <a href="">Contacts</a>
+            </li>
         </ul>
     </nav>
+
     <address>
-        <a href="info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+        </ul>
     </address>
 
  </header>
 
     <main>
-        <h1>
-        Effective Solutions for Your Business
-        </h1>
-        <button type="button">Order Service</button>
-       
         <section>
-        
+          <h1>
+           Effective Solutions for Your Business
+          </h1>
+         <button type="button">Order Service</button>
+        </section>
+
+        <section>
+         <h2 style="display:none;">targets</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -67,7 +82,7 @@
 
         <section>
 
-            <h2>Our team</h2>
+         <h2>Our team</h2>
             <ul>
                 <li>
                     <a href="">
@@ -104,7 +119,7 @@
     </main>
 
     <footer>
-       <a href="" target="_blank"> WEBSTUDIO</a>
+       <a href="./index.html" target="_blank"> WebStudio</a>
        <p>
         Increase the flow of customers and sales for your business with digital marketing & growth solutions.
        </p>
