--- a/index.html
+++ b/index.html
@@ -82,33 +82,25 @@
 
         <section>
 
-         <h2>Our team</h2>
+         <h2>Our Team</h2>
             <ul>
                 <li>
-                    <a href="">
-                        <img src="./images/prodact.jpg" alt="Tipula prodact" width="160" height="160" />
-                    </a>
+                    <img src="./images/prodact.jpg" alt="Tipula prodact" width="264" height="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/razrab.jpg" alt="Tipula razrab" width="160" height="160"  />
-                    </a>
+                    <img src="./images/razrab.jpg" alt="Tipula razrab" width="264" height="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/marketing.jpg" alt="Telochka marketing" width="160" height="160" />
-                    </a>
+                    <img src="./images/marketing.jpg" alt="Telochka marketing" width="264" height="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/diz.jpg" alt="tipula diz" width="160" height="160"  />
-                    </a>
+                    <img src="./images/diz.jpg" alt="tipula diz" width="264" height="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
